--- a/style.css
+++ b/style.css
@@ -290,6 +290,7 @@ nav a:hover {
     padding: 80px 20px;
     max-width: 1200px;
     margin: 0 auto;
+    text-align: center;
 }
 #contato h2 {
     font-size: 3rem;
@@ -303,7 +304,7 @@ p {
     margin-bottom: 20px;
     font-size: 25px;
     font-family: 'JetBrains Mono', monospace;
-    align-items: center;
+    text-align: center;
 }
 
 a {
@@ -312,11 +313,14 @@ a {
     text-decoration: none;
     font-weight: 600;
     transition: all 0.3s ease;
-    position: relative;
     font-family: 'JetBrains Mono', monospace;
-    font-size: 6rem;
+    font-size: 5rem;
     margin: 0 15px;
+    
 }
+
+
+   
 a:hover {
     color: var(--primary);
     text-shadow: 0 0 8px var(--primary);
